add style to desktop version

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,38 @@
       </section>
     </div>
     <div class="main__right">
-      hgjfhkf
+      <div class="form__input">
+        <form action="#">
+          <input type="text" placeholder="Another Loction..." class="input__text">
+          
+        </form>
+        <button class="form__button"><img src="../images/Search_4.png"  class="img__icon" alt=""></button>
+      </div>
+      <div class="weather__Cities">
+        <p class="title__cities">Birmingham</p>
+        <p class="title__cities">California</p>
+        <p class="title__cities">New York</p>
+        <p class="title__cities">Manchester</p>
+      </div>
+      <div class="weather__deatail">
+        <h3 class="weather__deatail-title">weather Deatail</h3>
+        <div class="wetaher__detail-information">
+          <p class="weather__detail-info">cloudy</p>
+          <p class="weather__detail-info--percentage">96%</p>
+        </div>
+        <div class="wetaher__detail-information">
+          <p class="weather__detail-info">Wind</p>
+          <p class="weather__detail-info--percentage">24km/h</p>
+        </div>
+        <div class="wetaher__detail-information">
+          <p class="weather__detail-info">Humidity</p>
+          <p class="weather__detail-info--percentage">66%</p>
+        </div>
+        <div class="wetaher__detail-information">
+          <p class="weather__detail-info">Rain</p>
+          <p class="weather__detail-info--percentage">8mm</p>
+        </div>
+      </div>
     </div>
    </main>
 
