--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,51 @@
            </div>
           
         </div>
-        <div>
+        <div class="weather__week-info">
+          <div class="waether__week">
+            <p class="day">Sun</p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
+          <div class="waether__week">
+            <p class="day">Mon</p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
+          <div class="waether__week">
+            <p class="day">Thu
+            </p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
+          <div class="waether__week">
+            <p class="day">Wed
+
+            </p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
+          <div class="waether__week">
+            <p class="day">Thu
+
+            </p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
+          <div class="waether__week">
+            <p class="day">Fri
+
+            </p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
+          <div class="waether__week">
+            <p class="day">Sat
+
+            </p>
+            <img src="../images/outline.png" alt="" class="img__weather">
+            <p class="weather__temp">22&#176;C</p>
+          </div>
         
         </div>
       </section>
