add city to api when the user click on search button

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="weather__header">
           <div class="weather__header-title">
             <h1 class="weather__header-temporty">
-              21<span>&#176;</span>
+             <span class="temp">21</span> <span>&#176;</span>
             </h1>
 
           </div>
@@ -85,7 +85,7 @@
     <div class="main__right">
       <div class="form__input">
         <form action="#">
-          <input type="text" placeholder="Another Loction..." class="input__text">
+          <input type="text" placeholder="Another Loction..." autocomplete="on" value="" class="input__text">
           
         </form>
         <button class="form__button"><img src="../images/Search_4.png"  class="img__icon" alt=""></button>
