add date to weather app

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           </div>
            <div class="weather__information">
              <h2 class="weather__city">Tehran</h2>
-             <h3 class="weather__date">12:30 -Thursday 22, 06 2021
+             <h3 class="weather__date">12:30 - Thursday, 22 06 2021
              </h3>
             
            </div>
@@ -100,19 +100,19 @@
         <h3 class="weather__deatail-title">weather Deatail</h3>
         <div class="wetaher__detail-information">
           <p class="weather__detail-info">cloudy</p>
-          <p class="weather__detail-info--percentage">96%</p>
+          <p class="weather__detail-info--percentage"> <span class="cloud-num">96</span>   %</p>
         </div>
         <div class="wetaher__detail-information">
           <p class="weather__detail-info">Wind</p>
-          <p class="weather__detail-info--percentage">24km/h</p>
+          <p class="weather__detail-info--percentage"> <span class="wind-num">24</span>  km/h</p>
         </div>
         <div class="wetaher__detail-information">
           <p class="weather__detail-info">Humidity</p>
-          <p class="weather__detail-info--percentage">66%</p>
+          <p class="weather__detail-info--percentage"> <span class="numer-hum">66</span>%</p>
         </div>
         <div class="wetaher__detail-information">
           <p class="weather__detail-info">Rain</p>
-          <p class="weather__detail-info--percentage">8mm</p>
+          <p class="weather__detail-info--percentage"> <span class="rain-num">8</span>  mm</p>
         </div>
       </div>
     </div>
