add background image by weather condition

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,7 @@
               <h3 class="weather__date">12:30 - Thursday, 22 06 2021</h3>
             </div>
             <div class="weather__type">
-              <div class="wha">
-                <img src="../images/icons/yyyy.png" alt="" class="img__weather" />
-              </div>
+              <img src="" alt="" class="img__weather" />
 
               <p class="weather__title--type">cloudy</p>
             </div>
