add some cities to check weather

--- a/src/index.html
+++ b/src/index.html
@@ -80,10 +80,10 @@
           </button>
         </div>
         <div class="weather__Cities">
-          <p class="title__cities">Birmingham</p>
-          <p class="title__cities">California</p>
-          <p class="title__cities">New York</p>
-          <p class="title__cities">Manchester</p>
+          <button class="title__cities">Birmingham</button>
+          <button class="title__cities">California</button>
+          <button class="title__cities">New York</button>
+          <button class="title__cities">Manchester</button>
         </div>
         <div class="weather__deatail">
           <h3 class="weather__deatail-title">weather Deatail</h3>
