add some background image and add javascript function for check weather next 5 days

--- a/src/index.html
+++ b/src/index.html
@@ -33,33 +33,43 @@
           <div class="weather__week-info">
             <div class="waether__week">
               <p class="day">Sun</p>
-              <img src="" alt="" class="img__weather" />
-              <p class="weather__temp">22&#176;C</p>
+              <!-- <img src="" alt="" class="img__weather" /> -->
+              <div class="weather__temp__minmax">
+                <p class="weather__temp-max">22&#176;C</p>
+                <p class="weather__temp-min">22&#176;C</p>
+              </div>
             </div>
             <div class="waether__week">
               <p class="day">Mon</p>
-              <img src="" alt="" class="img__weather" />
-              <p class="weather__temp">22&#176;C</p>
+              <!-- <img src="" alt="" class="img__weather" /> -->
+              <div class="weather__temp__minmax">
+                <p class="weather__temp-max">22&#176;C</p>
+                <p class="weather__temp-min">22&#176;C</p>
+              </div>
             </div>
             <div class="waether__week">
               <p class="day">Thu</p>
-              <img src="" alt="" class="img__weather" />
-              <p class="weather__temp">22&#176;C</p>
+              <!-- <img src="" alt="" class="img__weather" /> -->
+              <div class="weather__temp__minmax">
+                <p class="weather__temp-max">22&#176;C</p>
+                <p class="weather__temp-min">22&#176;C</p>
+              </div>
             </div>
             <div class="waether__week">
               <p class="day">Wed</p>
               <img src="" alt="" class="img__weather" />
-              <p class="weather__temp">22&#176;C</p>
+              <div class="weather__temp__minmax">
+                <p class="weather__temp-max">22&#176;C</p>
+                <p class="weather__temp-min">22&#176;C</p>
+              </div>
             </div>
             <div class="waether__week">
               <p class="day">Thu</p>
               <img src="" alt="" class="img__weather" />
-              <p class="weather__temp">22&#176;C</p>
-            </div>
-            <div class="waether__week">
-              <p class="day">Fri</p>
-              <img src="" alt="" class="img__weather" />
-              <p class="weather__temp">22&#176;C</p>
+              <div class="weather__temp__minmax">
+                <p class="weather__temp-max">22&#176;C</p>
+                <p class="weather__temp-min">22&#176;C</p>
+              </div>
             </div>
           </div>
         </section>
