--- a/src/index.html
+++ b/src/index.html
@@ -32,45 +32,54 @@
           </div>
           <div class="weather__week-info">
             <div class="waether__week">
-              <p class="day">Sun</p>
-              <!-- <img src="" alt="" class="img__weather" /> -->
+              <p class="day"></p>
+              <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max">22&#176;C</p>
-                <p class="weather__temp-min">22&#176;C</p>
+                <p class="weather__temp-max"><span class="tem__max"></span> &#8451;</p>
+                <p class="weather__temp-min"><span class="tem__min"></span> &#8451;</p>
               </div>
             </div>
             <div class="waether__week">
-              <p class="day">Mon</p>
-              <!-- <img src="" alt="" class="img__weather" /> -->
+              <p class="day"></p>
+              <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max">22&#176;C</p>
-                <p class="weather__temp-min">22&#176;C</p>
+                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
+                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
               </div>
             </div>
             <div class="waether__week">
-              <p class="day">Thu</p>
-              <!-- <img src="" alt="" class="img__weather" /> -->
+              <p class="day"></p>
+              <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max">22&#176;C</p>
-                <p class="weather__temp-min">22&#176;C</p>
+                
+                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
+                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
               </div>
             </div>
             <div class="waether__week">
-              <p class="day">Wed</p>
-              <img src="" alt="" class="img__weather" />
+              <p class="day"></p>
+              <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max">22&#176;C</p>
-                <p class="weather__temp-min">22&#176;C</p>
+                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
+                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
               </div>
             </div>
             <div class="waether__week">
-              <p class="day">Thu</p>
-              <img src="" alt="" class="img__weather" />
+              <p class="day"></p>
+              <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max">22&#176;C</p>
-                <p class="weather__temp-min">22&#176;C</p>
+                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
+                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
               </div>
             </div>
+            <!-- <div class="waether__week">
+              <p class="day"></p>
+              <img src="" alt="" class="img__weather-week" />
+              <div class="weather__temp__minmax">
+                <p class="weather__temp-max"><span class="tem__max"></span></p>
+                <p class="weather__temp-min"><span class="tem__min"></span></p>
+              </div>
+            </div> -->
           </div>
         </section>
       </div>
