add favicon to project

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="./icons/weather.png"
+      type="image/gif"
+      sizes="16x16"
+    />
     <title>Weather app</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -35,41 +41,60 @@
               <p class="day"></p>
               <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max"><span class="tem__max"></span> &#8451;</p>
-                <p class="weather__temp-min"><span class="tem__min"></span> &#8451;</p>
+                <p class="weather__temp-max">
+                  <span class="tem__max"></span> &#8451;
+                </p>
+                <p class="weather__temp-min">
+                  <span class="tem__min"></span> &#8451;
+                </p>
               </div>
             </div>
             <div class="waether__week">
               <p class="day"></p>
               <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
-                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
+                <p class="weather__temp-max">
+                  <span class="tem__max"></span>&#8451;
+                </p>
+                <p class="weather__temp-min">
+                  <span class="tem__min"></span>&#8451;
+                </p>
               </div>
             </div>
             <div class="waether__week">
               <p class="day"></p>
               <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                
-                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
-                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
+                <p class="weather__temp-max">
+                  <span class="tem__max"></span>&#8451;
+                </p>
+                <p class="weather__temp-min">
+                  <span class="tem__min"></span>&#8451;
+                </p>
               </div>
             </div>
             <div class="waether__week">
               <p class="day"></p>
               <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
-                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
+                <p class="weather__temp-max">
+                  <span class="tem__max"></span>&#8451;
+                </p>
+                <p class="weather__temp-min">
+                  <span class="tem__min"></span>&#8451;
+                </p>
               </div>
             </div>
             <div class="waether__week">
               <p class="day"></p>
               <img src="" alt="" class="img__weather-week" />
               <div class="weather__temp__minmax">
-                <p class="weather__temp-max"><span class="tem__max"></span>&#8451;</p>
-                <p class="weather__temp-min"><span class="tem__min"></span>&#8451;</p>
+                <p class="weather__temp-max">
+                  <span class="tem__max"></span>&#8451;
+                </p>
+                <p class="weather__temp-min">
+                  <span class="tem__min"></span>&#8451;
+                </p>
               </div>
             </div>
             <!-- <div class="waether__week">
