add responsive to mobile

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                 <p class="weather__temp-max">
                   <span class="tem__max"></span>&#8451;
                 </p>
-                <p class="weather__temp-min">
+                <p class="weather__temp-minweather__temp-min">
                   <span class="tem__min"></span>&#8451;
                 </p>
               </div>
