add image to javascript file

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
             />
           </form>
           <button class="form__button">
-            <img src="../images/Search_4.png" class="img__icon" alt="" />
+            <img src="./images/Search_4.png" class="img__icon" alt="" />
           </button>
         </div>
         <div class="weather__Cities">
