upadte the js file and README.md file

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="weather__information">
               <h2 class="weather__city"></h2>
-              <h3 class="weather__date">12:30 - Thursday, 22 06 2021</h3>
+              <time class="weather__date">12:30 - Thursday, 22 06 2021</time>
             </div>
             <div class="weather__type">
               <img src="" alt="" class="img__weather" />
@@ -150,6 +150,6 @@
         </div>
       </div>
     </main>
-    <script src="./main.js"></script>
+   <script type="module" src="./main.js"></script>
   </body>
 </html>
